--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@absolute-web/vsf-klaviyo",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The Klaviyo module.",
   "main": "lib/index.cjs.js",
   "module": "lib/index.es.js",
@@ -32,9 +32,7 @@
   },
   "homepage": "https://github.com/AbsoluteWebServices/vsf-klaviyo#readme",
   "dependencies": {
-    "@absolute-web/vsf-core": "^0.0.1",
-    "ohmyfetch": "^0.3.1",
-    "vue-demi": "latest"
+    "ohmyfetch": "^0.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.0",
@@ -44,8 +42,9 @@
     "typescript": "^4.3.3"
   },
   "peerDependencies": {
-    "@vue/composition-api": "1.0.0-beta.21",
-    "vue": "^2.0.0 || >=3.0.0-rc.0"
+    "@absolute-web/vsf-core": "~0.0.1",
+    "vue": "^2.0.0 || >=3.0.0-rc.0",
+    "vue-demi": "latest"
   },
   "files": [
     "lib/**/*",
